# RadioTerm

./: .travis.yml  CMakeLists.txt  README.md  build_gui.sh
gui/: mainwindow.py  mainwindow.ui  outgoing_call.py  ui_setup.py
res/: icon.icns
src/: main.py  mainwindow.cpp  mainwindow.h  mainwindow.py  outgoing_call.ui  ui_setup.ui  user_settings.cpp  user_settings.h  user_settings.ui
